# visual-odometry-project

./: .flake8  .gitignore  README.md  environment.yml  features.py  map.py  pyproject.toml  setup.sh
.github/workflows/: python-tester.yml
primitives/: frame.py  matches.py
sensors/: camera.py  setup.py
src/: gui.py  main.py  run_vo.py
src/vo/: helpers.py
src/vo/algorithms/: __init__.py  ransac.py
src/vo/features/: __init__.py  harris.py  klt.py  sift.py  tracker.py
src/vo/landmarks/: __init__.py  triangulation.py
src/vo/pose_estimation/: __init__.py  p3p.py
src/vo/primitives/: __init__.py  features.py  frame.py  loader.py  matches.py  state.py
src/vo/sensors/: camera.py
src/vo/visualization/: __init__.py  overlays.py  point_cloud.py
tests/: test_features.py  test_harris.py  test_helpers.py  test_loader.py  test_p3p.py  test_ransac.py  test_triangulation.py
